Related-Bug: #1647533 - Config Pages misalignment
1)Checkbox alignment VN Config page
2)Alignment of editable grid tables
3)Routing policy Query alignment - added parent id so that it doesn't affect
other pages
4)Spacing between label and editable grid table of Security Group was incorrect.
Added margin.

--- a/webroot/common/ui/css/contrail.controller.css
+++ b/webroot/common/ui/css/contrail.controller.css
@@ -275,7 +275,7 @@ div.vis-network canvas{
     border-top:none;}
 #peer_selection .item-list table tr:first-child td{
     background-color:gray;}
-#bgp-grid .value th, #config-vn-list .value th, #service-instances-grid .value th, #global-bgp-options-grid th, #port-grid-id th{
+#bgp-grid .value th, #config-vn-list .value th, #service-instances-grid .value th, #global-bgp-options-grid th{
     font-weight:600;
     border-bottom:#777 solid 1px;
     padding-bottom:2px;}
@@ -383,6 +383,7 @@ tr.collapsibleChildContainer{
 #configure-network input.ace-input[type=checkbox] + .ace-lbl::before, #configure-network input.ace-input[type=radio] + .ace-lbl::before{
     margin-right:10px;}
 #configure-Ports-form .contrail-editable-grid-table{
+    margin-top:5px;
     margin-bottom:10px;}
 #network_ipam_refs th, #user_created_host_routes th, #user_created_dns_servers th, #floating_ip_pools th, #user_created_route_targets th, #user_created_export_route_targets th, #user_created_import_route_targets th,#configure-Ports th, #configure-service_instance-form th{
     padding-left:5px;}
@@ -493,9 +494,19 @@ table td[class*="col-xs-"], table th[class*="col-xs-"], .row-fluid table td[clas
     width:65%!important;
 }
 
-.and-clause-collection td.data-cell.data-cell-value, #or-clause-collection td.data-cell.data-cell-variables {
+#configure-routingPolicy .and-clause-collection td.data-cell.data-cell-value, #configure-routingPolicy #or-clause-collection td.data-cell.data-cell-variables {
     padding-top: 12px;
 }
-#or-clause-collection .data-cell.data-cell-operation>div{
+#configure-routingPolicy #or-clause-collection .data-cell.data-cell-operation>div{
     margin-top:-2px;
 }
+#servicePorts .contrail-editable-grid-table{
+    margin-left:15px;
+    margin-right:15px;}
+#share_list th:first-child, .contrail-editable-grid-table th:first-child {
+    padding-left: 5px;
+}
+#security_group_edit_security_group .contrail-editable-grid-table{
+    margin-top:5px;}
+#interface #infServer{
+    padding-left:15px;}
